--- a/BaseDeDatos/BaseDeDatos/MainWindow.xaml
+++ b/BaseDeDatos/BaseDeDatos/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Biblioteca de Música"  Height="700" Width="900" Background="Bisque" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="Biblioteca de Música"  Height="700" Width="900" Background="#FFFD3B02" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="20"/>
@@ -56,7 +56,7 @@
                 <Button Name="btnCancelar" Content="Cancelar" FontSize="25" Width="120" Margin="5" Click="BtnCancelar_Click" />
                 <Button Name="btnSalir" Content="Salir" FontSize="25" Width="120" Margin="5" Background="#400000" Foreground="Bisque" Click="BtnSalir_Click" />
             </WrapPanel>
-            <Label Content="No encontre Registros." Name="lbContenido" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="#FFE10000"></Label>
+            <Label Content="No encontre Registros." Name="lbContenido" HorizontalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="#FFFDF4F4"></Label>
             <WrapPanel Margin="20" HorizontalAlignment="Center">
                 <DataGrid AutoGenerateColumns="True" Name="gvDatos" SelectionMode="Single" FontSize="15" Padding="5" Background="Black" />
             </WrapPanel>
